samples/_failures_safe/1761426647_f3b3db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4851d1d4.c: In function ‘main’:
./samples/SAFE/__tmp_4851d1d4.c:144:5: error: expected declaration or statement at end of input
  144 |     compressed_buf.size = compressed_size;
      |     ^~~~~~~~~~~~~~
